# ldtk

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  setup.py
doc/source/: api.rst  blah.md
ldtk/: __init__.py  client.py  core.py  filters.py  ldmodel.py  ldtk.py  version.py
ldtk/filter_files/: tess.csv
ldtk/filter_files/gtc/osiris/: Sloanr.txt  Sloanz.txt
ldtk/models/: __init__.py  quadratic.py  triangular.py
notebooks/: 01_Example_basics.ipynb  A02_redifining_stellar_edge.ipynb  A1_manuscript_plots.ipynb  A2_redifining_stellar_edge.ipynb  SVOFilter.ipynb  example_1.ipynb  manuscript_plots.ipynb
src/: __init__.py  client.py  core.py  filters.py  ld_models.py  ldmodel.py  ldtk.py  qe.py
src/filter_files/gtc/osiris/: Sloani.txt
src/filters/gtc/osiris/: sloan_g.txt
tests/: test_ld_models.py
